--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'Nunito';
+  font-weight: 700;
+  font-display: fallback;
+  src: url("../public/fonts/Nunito-VariableFont_wght.ttf");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+/* MAIN APPLICATION */
+#main { 
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-left: 8%;
+  padding-right: 8%;
+  padding-bottom: 0;
+  background-color: #1C1C1C;
 }
 
-.App-link {
-  color: #61dafb;
+/* INTRODUCTION */
+.intro {
+  font-family: 'Nunito';
+  font-style: bold;
+  padding-top: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.welcome {
+  color: #DDDDDD;
+  font-size: 18px;
+}
+
+.user {
+  color: #fff;
+  margin-top: -5px;
+  font-size: 30px;
+}
+
+/* HYDRATION CARD */
+.hydrationCard {
+  font-family: 'Nunito';
+  background-color: #f3f3f3;
+  padding: 10px 20px 0px 20px;
+  min-height: 200px;
+  font-size: 25px;
+  border-radius: 15px;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px 0 rgba(78, 78, 78, 0.2), 0 6px 20px 0 rgba(78, 78, 78, 0.19);
+}
+
+.date {
+  font-size: 15px;
+  font-weight: 800;
+  color: #616161;
+}
+
+.mainText {
+  font-size: 30px;
+  margin: 0;
+}
+
+.subText {
+  font-size: 15px;
+  color: #616161;
+  margin-top: -40px;
+  width: 200px;
+  padding-bottom: 20px;
+}
+
+.image {
+  position: relative;
+  margin-left: 230px;
+  margin-top: -120px;
+  width: 80px;
+}
+
+/* STATISTICS */
+.stats {
+  font-family: 'Nunito';
+  color: #fff;
+  text-align: center;
+  display: grid;
+  grid-template-columns: auto auto;
+  font-size: 20px;
+}
+
+.stats > p {
+  margin-top: 30px;
+  font-size: 30px;
+}
+
+.val {
+  color: #37FCFF;
+}
+
+.divider {
+  margin-top: -10px;
+  width: 150px;
+  border-bottom: 1px solid #fff;
+  margin: -10px auto 0 auto;
+}
+
+/* PERCENTAGE */
+.percentage {
+  margin-top: 30px;
+  font-family: 'Nunito';
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.circle {
+  border-radius: 50%;
+  margin: auto;
+  height: 150px;
+	width: 150px;
+  border: 5px solid #37FCFF;
+}
+
+.numberVal {
+  font-size: 50px;
+  text-align: center;
+  margin-top: 30px;
+  color: #fff;
+}
+
+.supportingText {
+  font-size: 20px;
+  color: #DDDDDD;
+  text-align: center;
+  margin-top: -50px;
+}
+
+/* WARNING */
+.warning {
+  background-color: #f3f3f3;
+  min-height: 50px;
+  width: 100%;
+  margin-top: 30px;
+  box-shadow: 0 4px 8px 0 rgba(78, 78, 78, 0.2), 0 6px 20px 0 rgba(78, 78, 78, 0.19);
+  border-radius: 15px;
+}
+
+.warningTextGood {
+  text-align: center;
+  font-size: 20px;
+  color: #1C1C1C;
+  font-family: 'Nunito';
+  padding-top: 10px;
+}
+
+.warningTextBad {
+  text-align: center;
+  font-size: 20px;
+  color: #ff2727;
+  font-family: 'Nunito';
+  text-decoration: underline;
+  padding-top: 10px;
 }
